# zkp-polkadot-interoperability

./: .gitignore  README.md
results/result10_implementation_results_report/: implementation_results_report.md  result_index.txt  supervisor_summary.txt
results/result11_supervisor_demo/: demo_commands.txt  supervisor_demo_script.md
results/result4_real_groth16_verifier/: result4_summary.txt
results/result5_full_rust_groth16_verification/: result5_summary.txt
results/result6_substrate_verifier_adapter/: result6_files.txt  result6_summary.txt
results/result7_runtime_execution_model/: result7_flow.txt  result7_summary.txt
results/result8_simulated_interoperability_action/: result8_flow.txt  result8_summary.txt
results/result9_xcm_message_simulation/: result9_flow.txt  result9_summary.txt
rust-groth16-verifier/: Cargo.toml
rust-groth16-verifier/src/: main.rs
substrate-verifier-pallet/src/: lib.rs
substrate-verifier-pallet/src/interoperability/: action.rs
substrate-verifier-pallet/src/runtime_model/: execution_model.rs  proof_types.rs
substrate-verifier-pallet/src/verifier/: groth16_adapter.rs
substrate-verifier-pallet/src/xcm_simulation/: message.rs
