[package]
name = "rust-groth16-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5"
ark-ec = "0.5"
ark-ff = "0.5"
ark-groth16 = "0.5"
ark-serialize = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
num-traits = "0.2"
anyhow = "1"

[workspace]
